--- a/src/components/Layout/MainSidebar/MainSidebar.scss
+++ b/src/components/Layout/MainSidebar/MainSidebar.scss
@@ -1,23 +1,33 @@
 @media (max-width: 767.98px) {
-  .main-sidebar {
+  .mainSidebar {
     transform: translateX(-100%);
-    box-shadow: none;
+    box-shadow: 0 0.125rem 9.375rem rgba(90, 97, 105, 0.1),
+      0 0.25rem 0.5rem rgba(90, 97, 105, 0.12),
+      0 0.9375rem 1.375rem rgba(90, 97, 105, 0.1),
+      0 0.4375rem 2.1875rem rgba(165, 182, 201, 0.1);
   }
 }
 
-.main-sidebar {
+.mainSidebar {
   top: 0;
   position: fixed;
   height: calc(100vh);
   z-index: 1070;
   will-change: transform;
   transition: transform 0.2s ease-in-out;
+  width: 65%;
+}
 
-  &.open {
-    transform: translateX(0);
-    box-shadow: 0 0.125rem 9.375rem rgba(90, 97, 105, 0.1),
-      0 0.25rem 0.5rem rgba(90, 97, 105, 0.12),
-      0 0.9375rem 1.375rem rgba(90, 97, 105, 0.1),
-      0 0.4375rem 2.1875rem rgba(165, 182, 201, 0.1);
-  }
+.mainSidebar--open {
+  transform: translateX(0);
+  transition: transform 0.2s ease-in-out;
+}
+
+.sidebarMain__navItem--selected {
+  border-radius: 6px;
+  padding: 5px;
+}
+
+.sidebarMain__navItem {
+  padding: 5px;
 }
