--- a/web-ui/src/assets/scss/colors.scss
+++ b/web-ui/src/assets/scss/colors.scss
@@ -1,9 +1,9 @@
-$primary-blue: #1e8d88;
+$primary-green: #1e8d88;
 $black: #000;
 $white: #fff;
 $bg-grey: #e8e8e8;
 $light-grey: #aaa9a9;
-$dark-grey: #7a7878;
+$dark-grey: #353535;
 $green-dark: #156363;
 $green-light: #e3f6f5;
 $red: #b3271d;
