--- a/web-ui/src/components/Layout/MainSidebar/MainSidebar.scss
+++ b/web-ui/src/components/Layout/MainSidebar/MainSidebar.scss
@@ -12,7 +12,6 @@
   top: 0;
   position: fixed;
   height: calc(100vh);
-  z-index: 1070;
   will-change: transform;
   transition: transform 0.2s ease-in-out;
   width: 65%;
@@ -21,6 +20,7 @@
 .mainSidebar--open {
   transform: translateX(0);
   transition: transform 0.2s ease-in-out;
+  z-index: 1070;
 }
 
 .sidebarMain__navItem--selected {
@@ -30,4 +30,7 @@
 
 .sidebarMain__navItem {
   padding: 5px;
+  svg {
+    min-width: 20px;
+  }
 }
