--- a/web-ui/src/components/Spinner/Spinner.scss
+++ b/web-ui/src/components/Spinner/Spinner.scss
@@ -1,4 +1,5 @@
-/* via https://projects.lukehaas.me/css-loaders/ */
+@import '../../assets/scss/colors.scss';
+
 .loader,
 .loader:after {
   border-radius: 50%;
@@ -10,10 +11,10 @@
   font-size: 10px;
   position: relative;
   text-indent: -9999em;
-  border-top: 1.1em solid rgba(255, 151, 0, 0.2);
-  border-right: 1.1em solid rgba(255, 151, 0, 0.2);
-  border-bottom: 1.1em solid rgba(255, 151, 0, 0.2);
-  border-left: 1.1em solid #ff9700;
+  border-top: 1.1em solid #8c8c8c;
+  border-right: 1.1em solid #8c8c8c;
+  border-bottom: 1.1em solid #8c8c8c;
+  border-left: 1.1em solid $primary-green;
   -webkit-transform: translateZ(0);
   -ms-transform: translateZ(0);
   transform: translateZ(0);
