fix layout and back button

--- a/web-ui/src/components/Layout/MainSidebar/MainSidebar.scss
+++ b/web-ui/src/components/Layout/MainSidebar/MainSidebar.scss
@@ -44,3 +44,10 @@
     box-shadow: inset 0px 0px 0px 1px white;
   }
 }
+
+.userPhoto {
+  width: 84%;
+  height: 7em;
+  border-radius: 50%;
+  background-color: white;
+}
