--- a/web-ui/src/assets/scss/colors.scss
+++ b/web-ui/src/assets/scss/colors.scss
@@ -9,7 +9,7 @@ $green-light: #e3f6f5;
 $red: #b3271d;
 $green: #3ca12a;
 $blue: #34a1eb;
-$menu-selected: #e8e8e866;
+$font-color: #3d5170;
 
 //white colors
 $white-sidebar-bg: #fff;
