--- a/web-ui/src/components/Layout/MainSidebar/MainSidebar.scss
+++ b/web-ui/src/components/Layout/MainSidebar/MainSidebar.scss
@@ -8,6 +8,10 @@
       0 0.9375rem 1.375rem rgba(90, 97, 105, 0.1),
       0 0.4375rem 2.1875rem rgba(165, 182, 201, 0.1);
   }
+  .userPhoto {
+    width: 30vw;
+    height: 30vw;
+  }
 }
 
 .mainSidebar {
@@ -25,29 +29,15 @@
   z-index: 1070;
 }
 
-.sidebarMain__navItem--selected {
-  border-radius: 6px;
-  padding: 5px;
-}
-
 .sidebarMain__navItem {
-  color: white;
-  padding: 5px;
   svg {
     min-width: 20px;
-  }
-
-  &:hover {
-    border-radius: 6px;
-    color: white;
-    text-decoration: none;
-    box-shadow: inset 0px 0px 0px 1px white;
   }
 }
 
 .userPhoto {
-  width: 84%;
-  height: 7em;
+  width: 10vw;
+  height: 10vw;
   border-radius: 50%;
-  background-color: white;
+  background-color: $light-grey;
 }
